--- a/packages/react-app/src/index.css
+++ b/packages/react-app/src/index.css
@@ -11,3 +11,9 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+a:visited 
+{
+  text-decoration: none;
+  decoration: none; 
+}
